feat : cors settings configured