@@ -1,7 +1,9 @@
 package com.prashant.quicktext.server.configs;
 
 import com.prashant.quicktext.server.filter.JWTFilter;
+import jakarta.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -17,12 +19,14 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @EnableMethodSecurity
 @EnableWebSecurity
 @RequiredArgsConstructor
+@Slf4j
 public class SecurityConfig {
 
     private final JWTFilter jwtFilter;
@@ -30,18 +34,25 @@ public class SecurityConfig {
     @Value("${frontend-url}")
     private String frontendUrl;
 
+    @PostConstruct
+    public void logFrontendUrl() {
+        log.info(" Loaded Frontend URLs: {}", frontendUrl);
+    }
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws  Exception {
         return http
                 .cors(cors -> cors.configurationSource(request -> {
                     var config = new CorsConfiguration();
-                    config.setAllowedOrigins(List.of(frontendUrl));
+                    config.setAllowedOrigins(Arrays.asList(frontendUrl.split(",")));
                     config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
                     config.setAllowedHeaders(List.of("Authorization", "Content-Type", "Accept", "Origin", "X-Requested-With", "multipart/form-data"));
+                    config.setExposedHeaders(List.of("Authorization", "Content-Disposition"));
                     config.setAllowCredentials(true);
+                    config.setMaxAge(3600L);
                     return config;
                  }))
                 .csrf(AbstractHttpConfigurer::disable)
+
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class)
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(req->req
